--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@splidejs/splide": "^4.0.1",
     "@vercel/analytics": "^0.1.6",
+    "axios": "^1.6.7",
     "color": "^4.2.3",
     "dayjs": "^1.11.1",
     "export-from-json": "^1.6.0",
