--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@testing-library/user-event": "^14.1.1",
     "@types/color": "^3.0.3",
     "@types/node": "17.0.23",
-    "@types/react": "18.0.1",
+    "@types/react": "^18.2.55",
     "@types/react-dom": "18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "autoprefixer": "^10.4.4",
