--- a/package.json
+++ b/package.json
@@ -24,16 +24,23 @@
     "@mui/material": "^5.6.1",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@splidejs/splide": "^4.0.1",
+    "@types/file-saver": "^2.0.7",
     "@vercel/analytics": "^0.1.6",
     "axios": "^1.6.7",
     "color": "^4.2.3",
     "dayjs": "^1.11.1",
+    "docx": "^8.5.0",
+    "docxtemplater": "^3.46.0",
     "export-from-json": "^1.6.0",
+    "file-saver": "^2.0.5",
+    "file-saverjs": "^1.3.6",
     "framer-motion": "^6.3.0",
+    "html-docx-js": "^0.3.1",
     "html-react-parser": "^3.0.1",
     "immer": "^9.0.12",
     "jodit": "^3.18.6",
     "next": "^13.1.6",
+    "pizzip": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
